# linearProgrammingTaskMaker

./: CMakeLists.txt
src/: component.h  graph.h  main.cpp  solver.h
tests/test_component/: test_component.cpp  test_component_input.txt
tests/test_framework/: test_framework.cpp  test_framework_output_canonical.txt
tests/test_graph/: test_graph.cpp  test_graph_input.txt
